fixed social links alignement

--- a/components/shared/styles/3-modules/_social-links.scss
+++ b/components/shared/styles/3-modules/_social-links.scss
@@ -8,7 +8,6 @@
     align-items: center;
     flex-wrap: wrap;
     position: relative;
-    top: 30px;
     
   }
 
